--- a/index.html
+++ b/index.html
@@ -5,87 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-    <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contacts</a></li>
+    <header class="header">
+    <nav class="header-navigation">
+        <a href="./index.html" class="header-logo link">Web<span class="header-logo-part">Studio</span></a>
+        <ul class="header-list list">
+            <li class="header-item"><a href="./index.html" class="header-link link">Studio</a></li>
+            <li class="header-item"><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
+            <li class="header-item"><a href="#" class="header-link link">Contacts</a></li>
         </ul>
     </nav>
-    <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+    <address class="header-address">
+        <ul class="header-list list">
+            <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="header-tel link">+11 (000) 111-11-11</a></li>
         </ul>
     </address>    
     </header> 
     <main>
-    <section>
-        <h1>Effective solutions for your business</h1>
-        <button type="button">Order Service</button>
+    <section class="hero">
+        <h1 class="hero-title">Effective solutions<br/> for your business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
     </section>
-    <section>
-        <h2>Description</h2>
-        <ul>
-            <li>
-                <h3>Strategy</h3>
-                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
+    <section class="menu">
+        <h2 class="visually-hidden">Description</h2>
+        <ul class="menu-list list">
+            <li class="menu-item">
+                <h3 class="menu-title">Strategy</h3>
+                <p class="menu-text">Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
             </li>
-            <li>
-                <h3>Punctuality</h3>
-                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            <li class="menu-item">
+                <h3 class="menu-title">Punctuality</h3>
+                <p class="menu-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
-                <h3>Diligence</h3>
-                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            <li class="menu-item">
+                <h3 class="menu-title">Diligence</h3>
+                <p class="menu-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
-                <h3>Technologies</h3>
-                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <li class="menu-item">
+                <h3 class="menu-title">Technologies</h3>
+                <p class="menu-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
     </section>
-    <section>
-        <h2>What are we doing</h2>
-        <ul>
+    <section class="mobile">
+        <h2 class="mobile-title">What are we doing</h2>
+        <ul class="mobile-list list">
             <li><img src="./images/img1.jpg" alt="monitor" width="360" height="300"></li>
             <li><img src="./images/img2.jpg" alt="phone" width="360" height="300"></li>
             <li><img src="./images/img3.jpg" alt="laptop" width="360" height="300"></li>
         </ul>
     </section>
-    <section>
-        <h2>Our Team</h2>
-        <ul>
-            <li>
+    <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list list">
+            <li class="team-card">
                 <img src="./images/imgMark.jpg" alt="Mark" width="264" height="260">
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
             </li>
-            <li>
+            <li class="team-card">
                 <img src="./images/imgTom.jpg" alt="Tom" width="264" height="260">
-                <h3>Tom Ford</h3>
-                <p>Frontend Developer</p>
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-card">
                 <img src="./images/imgCamila.jpg" alt="Camila" width="264" height="260">
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
             </li>
-            <li>
+            <li class="team-card">
                 <img src="./images/imgDaniel.jpg" alt="Daniel" width="264" height="260">
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
             </li>
         </ul>
     </section>
     </main>
-    <footer>
-    <a href="./index.html" class="logo">Web<span>Studio</span></a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+    <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part">Studio</span></a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
