--- a/portfolio.html
+++ b/portfolio.html
@@ -5,89 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-    <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Contacts</a></li>
+    <header class="header">
+    <nav class="header-navigation">
+        <a href="./index.html" class="header-logo link">Web<span class="header-logo-part">Studio</span></a>
+        <ul class="header-list list">
+            <li class="header-item"><a href="./index.html" class="header-link link">Studio</a></li>
+            <li class="header-item"><a href="./portfolio.html" class="header-link link">Portfolio</a></li>
+            <li class="header-item"><a href="#" class="header-link link">Contacts</a></li>
         </ul>
     </nav>
     <address>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="header-list list">
+            <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="header-tel link">+11 (000) 111-11-11</a></li>
         </ul>
     </address>    
     </header> 
     <main>
-    <section>
-        <h1>Buttons</h1>
-        <ul>
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+    <section class="button">
+        <h1 class="button-title">Buttons</h1>
+        <ul class="button-list list">
+            <li class="button-item"><button type="button" class="button-text">All</button></li>
+            <li class="button-item"><button type="button" class="button-text">Web Site</button></li>
+            <li class="button-item"><button type="button" class="button-text">App</button></li>
+            <li class="button-item"><button type="button" class="button-text">Design</button></li>
+            <li class="button-item"><button type="button" class="button-text">Marketing</button></li>
         </ul>
     </section>
-    <section>
-        <h2>Portfolio</h2>
-        <ul>
-            <li>
+    <section class="portfolio">
+        <h2 class="portfolio-title">Portfolio</h2>
+        <ul class="portfolio-list list">
+            <li class="portfolio-card">
                 <img src="./images/bankapp.jpeg" alt="banking-app" width="360">
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
+                <h3 class="portfolio-suptitle">Banking App Interface Concept</h3>
+                <p class="portfolio-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/payment.jpeg" alt="cashless-payment" width="360">
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
+                <h3 class="portfolio-suptitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/comp.jpeg" alt="meditation-app" width="360">
-                <h3>Meditation App</h3>
-                <p>App</p>
+                <h3 class="portfolio-suptitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/taxi-service.jpeg" alt="taxi-service" width="360">
-                <h3>Taxi service</h3>
-                <p>Marketing</p>
+                <h3 class="portfolio-suptitle">Taxi service</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/illustration.jpeg" alt="screen-illustration" width="360">
-                <h3>Screen Illustration</h3>
-                <p>Design</p>
+                <h3 class="portfolio-suptitle">Screen Illustration</h3>
+                <p class="portfolio-text">Design</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/online-courses.jpeg" alt="online-courses" width="360">
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
+                <h3 class="portfolio-suptitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/instagram-stories.jpeg" alt="inatagram-stories" width="360">
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
+                <h3 class="portfolio-suptitle">Instagram Stories Concept</h3>
+                <p class="portfolio-text">Design</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/organic-food.jpeg" alt="organic-food" width="360">
-                <h3>Organic food</h3>
-                <p>Web Site</p>
+                <h3 class="portfolio-suptitle">Organic food</h3>
+                <p class="portfolio-text">Web Site</p>
             </li>
-            <li>
+            <li class="portfolio-card">
                 <img src="./images/coffee.jpeg" alt="fresh-coffee" width="360">
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
+                <h3 class="portfolio-suptitle">Fresh Coffee</h3>
+                <p class="portfolio-text">Web Site</p>
             </li>
         </ul>
     </section>
     </main>
-    <footer>
-    <a href="./index.html" class="logo">Web<span>Studio</span></a>
-    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+    <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-part">Studio</span></a>
+    <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
